# Animal-Classifier

./: .gitignore  README.md  main.py  pyproject.toml
yucatan_vision/: __init__.py  cli.py  config.py  database.py  dataset.py  detect.py  logging_config.py  sample_images.py  scraper.py  train.py  vet_data.py
