[project]
name = "yucatan-vision"
version = "0.1.0"
description = "Sistema de vision artificial para detectar animales endemicos de Yucatan y evaluar su toxicidad para caninos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bing-image-downloader>=1.1.3",
    "opencv-python-headless>=5.0.0.93",
    "pillow>=10.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "ultralytics>=8.4.87",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
